@@ -466,3 +466,5 @@
 	 #871182) (Fred).
 20040107 utils.c: replace arbitrary constant by PATH_MAX (next part of
 	 patch #871182) (Fred).
+20040108 specplus3.c, trdos.[ch], utils.[ch], ui/ui.h, ui/gtk/gtkui.c:
+	 make writes to TR-DOS disks need explicit commits.
